Made fonts themeable - part II